[tool.poetry]
name = "hack-230550"
version = "0.1.0"
description = ""
authors = ["Stealthy-CodeWalker <webdev.vanguard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "^0.6.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
uagents = "^0.6.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
